SERVER-26662 NIA gets time from timer factory

This way when the timer factory is mocked, the network interface's `now`
method can reflect the mocked time. This fixes a hang in the network
interface asio unit test.