src/mongo/executor/async_timer_mock.cpp
@@ -49,6 +49,7 @@ void AsyncTimerMockImpl::asyncWait(AsyncTimerInterface::Handler handler) {
         // Callbacks scheduled for now will fire immediately, synchronously.
         handler(std::error_code());
     } else {
+        stdx::lock_guard<stdx::mutex> lk(_handlersMutex);
         _handlers.push_back(handler);
     }
 }
@@ -69,11 +70,15 @@ Milliseconds AsyncTimerMockImpl::timeLeft() {
 }
 
 void AsyncTimerMockImpl::_callAllHandlers(std::error_code ec) {
-    for (auto elem = _handlers.begin(); elem != _handlers.end(); elem++) {
-        const auto& handler = *elem;
+    std::vector<AsyncTimerInterface::Handler> tmp;
+    {
+        stdx::lock_guard<stdx::mutex> lk(_handlersMutex);
+        tmp.swap(_handlers);
+    }
+
+    for (const auto& handler : tmp) {
         handler(ec);
     }
-    _handlers.clear();
 }
 
 void AsyncTimerMockImpl::_expire() {
@@ -104,6 +109,8 @@ std::unique_ptr<AsyncTimerInterface> AsyncTimerFactoryMock::make(asio::io_servic
 void AsyncTimerFactoryMock::fastForward(Milliseconds time) {
     stdx::lock_guard<stdx::mutex> lk(_timersMutex);
 
+    _curTime += time;
+
     // erase after iterating to be safe
     stdx::unordered_set<std::shared_ptr<AsyncTimerMockImpl>> expired;
     for (auto elem = _timers.begin(); elem != _timers.end(); elem++) {
@@ -118,6 +125,11 @@ void AsyncTimerFactoryMock::fastForward(Milliseconds time) {
     for (auto elem = expired.begin(); elem != expired.end(); elem++) {
         _timers.erase(*elem);
     }
+}
+
+Date_t AsyncTimerFactoryMock::now() {
+    stdx::lock_guard<stdx::mutex> lk(_timersMutex);
+    return Date_t::fromDurationSinceEpoch(_curTime);
 }
 
 }  // namespace executor
